some unfinished text on layout of FS dir structures.

--- a/main.tex
+++ b/main.tex
@@ -61,7 +61,7 @@ A minor thesis submitted in part fulfilment of the degree of \mytitle in \myfiel
 \include{mattock/ocfa}
 \include{mattock/mattock}
 \include{mattock/other}
-\include{MattockFS/mattockfs}
+\include{MattockFS/fsapi}
 \end{appendices}
 
 \end{document}
