--- a/mattock/hash.tex
+++ b/mattock/hash.tex
@@ -1,6 +1,6 @@
 \chapter{Algorithms for opportunistic hashing}
 Traditionally digital forensics has always used secure hashes for multiple purposes. With new cryptographic advances in the subfield of secure hashes, the specific algorithms that are commonly used in digital forensics have come to be considered cryptographically deprecated. This appendix looks into these deprecation issues with commonly used algorithms, compatibility issues with moving to other algorithms and performance and scalability considerations with alternative secure hashing functions.
-
+It also adresses how opportunistic-hashing geared algortitms in MattockFS further underline the need for specific hash function properties. 
 \section{Hashing algorithm choice is essential} 
 Traditionally MD5 and later also SHA1 have been used as hashing algorithms in digital forensics. From a cryptographic point of view, MD5 is now deprecated while SHA1 is in the process of being deprecated. Many public and law-enforcement-only hash collections like the Virusshare hash set or national child pornography hash sets are still distributed only with MD5 and/or SHA1 hashes. Others like the NIST NSRL contain MD5 and SHA1 hashes but are now supplemented with SHA256 hashes. While the later may sound like good news, there is an other important issue with SHA256 for use in a forensic framework: SHA256 may be significantly more secure as a hashing algorithm than SHA1 or MD5, it is also significantly more CPU intensive and not parallelizable. These properties may undermine the whole concept of opportunistic hashing as presented in this paper. While today NIST still considers the use of SHA1 for purposes as defined in this paper as \emph{acceptable use}, we must consider the retroactive impact that a cryptographer testifying on behalf of the defense and questioning the use of SHA1 in the forensic process may have a few years from now if SHA1 reaches the same level of deprecation that MD5 has today. Signs that SHA1s practical deprecation is near are plenty-full. Recently research showed that the use of GPUs can be effectively leveraged significantly reduce the cost of generating a SHA1 collision. While the specific purposes for what hashing is used within the computer forensics process for a great part may still safely use SHA1 or even MD5 today from a technical and economical perspective, the potential impact of an eloquent expert testifying on behalf of the defense against the use of such deprecated hashes must not be underestimated. It thus can be argued that moving forward to a non-deprecated secure hashing algorithm should be considered a priority for digital forensics.  Given the CPU resource issues with SHA256, it is also of paramount significance that the algorithm we move forwards to should have at least reasonable resource requirements in its software implementation. A quick study into available secure hashing algorithms reveals a small family of secure hashing algorithms share properties that would make each of these secure hashing algorithms prime candidates for supplementing and eventually replacing SHA1 as primary hashing algorithm for computer forensics.
 
